-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.5.1, Qt Creator 3.6.0-beta1
-
Windows 7 64 bit
win10x64
Reproduce steps:
1. Open session [ with a project]
2. ctrl+e,4 window
3. Open different session [ with a different project]
4. close empty left out window = crash
- replaces
-
QTCREATORBUG-15334 Having a file open in a separate window makes the Qt Creator to crash when switching sessions
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-15193 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 138513,5 | Editors: Fix crash when closing empty editor window | 3.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |